--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
+boto3==1.2.2
+botocore==1.3.12
+click==6.2
 connexion==1.0.26
+docutils==0.12
 Flask==0.10.1
+greenlet==0.4.9
 itsdangerous==0.24
 Jinja2==2.8
+jmespath==0.9.0
 MarkupSafe==0.23
+ordereddict==1.1
+python-dateutil==2.4.2
+python-dotenv==0.3.0
 PyYAML==3.11
 requests==2.8.1
 six==1.10.0
