--- a/nginx.conf
+++ b/nginx.conf
@@ -15,12 +15,12 @@ events {
 }
 
 http {
-	include       /etc/nginx/mime.types;
+	include     mime.types;
 	include		nginx-gz.conf;
     resolver 	10.0.5.33 8.8.8.8 valid=1s;#use local DNS and override TTL to whatever value makes sense
 
 	default_type application/octet-stream;
-	access_log /tmp/nginx.access.log combined;
+	access_log /var/log/nginx/access.log combined;
 
 	# use the kernel sendfile
 	sendfile        on;
@@ -55,6 +55,14 @@ http {
 			include uwsgi_params;
 			uwsgi_pass unix:/tmp/uwsgi.sock;
 		}
+
+        location /status.html { 
+        	root /usr/share/nginx/html/;
+        }
+        
+        location /status {
+            status;
+        }
 	}
 }
 
