--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ itsdangerous==0.24
 Jinja2==2.8
 jmespath==0.9.0
 MarkupSafe==0.23
+newrelic==2.64.0.48
 ordereddict==1.1
 python-dateutil==2.4.2
 python-dotenv==0.3.0
@@ -16,6 +17,6 @@ PyYAML==3.11
 requests==2.8.1
 six==1.10.0
 strict-rfc3339==0.6
-uwsgi==2.0.12
+uWSGI==2.0.12
 Werkzeug==0.11.2
 wheel==0.24.0
