working in docker cloud

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-daemon off;
+#daemon off;
 
 # this sets the user nginx will run as,
 #and the number of worker processes
@@ -8,7 +8,6 @@ worker_processes  auto;
 # setup where nginx will log errors to
 # and where the nginx process id resides
 error_log  /var/log/nginx/error.log;
-pid        /var/run/nginx.pid;
 
 events {
 	worker_connections  1024;
@@ -17,8 +16,10 @@ events {
 http {
 	include     mime.types;
 	include		nginx-gz.conf;
-    resolver 	master.mesos 8.8.8.8 valid=1s;#use local DNS and override TTL to whatever value makes sense
+    resolver 	10.21.0.2 valid=3s ipv6=off;#use local DNS and override TTL to whatever value makes sens**e
     resolver_timeout 2s;
+    client_max_body_size 30M;
+    client_body_buffer_size 30M;
 
 	default_type application/octet-stream;
 	access_log /var/log/nginx/access.log combined;
@@ -32,22 +33,17 @@ http {
 	# configure the virtual host
 	server {
 		root /usr/src/app/public;
+
 		# port to listen for requests on
-		listen 443 ssl;
-		# maximum accepted body size of client request
-		client_max_body_size 30M;
-		# the server will close connections after this time
-		ssl_certificate      /etc/ssl/nginx/certificate.pem;
-		ssl_certificate_key  /etc/ssl/nginx/key.pem;
-		## verify chain of trust of OCSP response using Root CA and Intermediate certs
-		#ssl_trusted_certificate /etc/letsencrypt/live/inginious.ps.nginxlab.com/chain.pem;
-		include nginx-ssl.conf;
+        listen 80 	default_server;
+    	server_name  _;
+        rewrite_log on;
 
 		keepalive_timeout	3600s;
 		keepalive_disable	none;
 		keepalive_requests  100000;
 
-		server_name user-manager.marathon.mesos;
+		server_name user-manager;
 		status_zone user-manager;
 
 		location / { try_files $uri @app; }
