--- a/nginx/default-location.conf
+++ b/nginx/default-location.conf
@@ -1,3 +1,6 @@
-error_page 401 403 /login;
-
 location / { try_files $uri @app; }
+
+        location @app {
+            include uwsgi_params;
+            uwsgi_pass unix:/tmp/uwsgi.sock;
+        }
