--- a/nginx/fabric_config.yaml
+++ b/nginx/fabric_config.yaml
@@ -6,3 +6,9 @@ resolver:
 external_domain_name: mra.nginxps.com
 #internal_domain_name: internal.ec2
 internal_domain_name: marathon.mesos
+log_to_syslog : false
+syslog_error_log_location: "syslog:server=localhost:5544 debug"
+error_log_location: "/var/log/nginx/error_log debug"
+service_log_name: pages_mra
+syslog_access_log_location: "syslog:server=localhost:5544,facility=local6,tag=pages_mra,severity=info json"
+access_log_location: "/var/log/nginx/access_log combined"
