--- a/nginx/fabric/fabric_config_local.yaml
+++ b/nginx/fabric/fabric_config_local.yaml
@@ -10,3 +10,9 @@ error_log_location: "/var/log/nginx/error_log debug"
 service_log_name: pages_mra
 syslog_access_log_location: "syslog:server=localhost:5544,facility=local6,tag=pages_mra,severity=info json"
 access_log_location: "/var/log/nginx/access_log combined"
+services:
+  album-manager:
+    server:
+    expose_external: true
+    healthcheck: false
+    port: 443
